--- a/manifest.json
+++ b/manifest.json
@@ -2,12 +2,11 @@
   "manifest_version": 3,
   "name": "Accessible find in page",
   "version": "1.1.1",
-  "description": "An accessibility-focused CTRL+F-style search tool that makes results easier to see with customizable colors, optional blinking, and bordered highlights.",
+  "description": "An accessibility-focused search tool with customizable colors, optional blinking, and bordered highlights.",
   "permissions": [
     "activeTab",
     "scripting",
-    "storage",
-    "tabs"
+    "storage"
   ],
   "action": {},
   "background": {
