feat(scripts): add prepare:windows script to zip the extension

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build:ts": "tsc -p tsconfig.json",
     "build:popup": "npm --prefix popup-app install --no-audit --no-fund && npm --prefix popup-app run build",
     "build:onboarding": "npm --prefix onboarding-app install --no-audit --no-fund && npm --prefix onboarding-app run build",
-    "build": "npm run build:ts && npm run build:popup && npm run build:onboarding"
+    "build": "npm run build:ts && npm run build:popup && npm run build:onboarding",
+    "prepare:windows": "Compress-Archive -Path manifest.json,128.png,dist -DestinationPath extension.zip" 
   },
   "author": "Gil Teixeira",
   "license": "ISC",
